Fix long item names overflowing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,10 @@
   margin-left: 0 !important;
 }
 
+.overflowWrap {
+  overflow-wrap: break-word;
+}
+
 ul.noStyle li {
   list-style-type: none;
 }
